# co-snarks

./: .gitattributes  .gitignore  .release-please-manifest.json  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  justfile  release-please-config.json  test.py
circom-mpc-compiler/: CHANGELOG.md  Cargo.toml
circom-mpc-compiler/src/: lib.rs
circom-mpc-vm/: CHANGELOG.md  Cargo.toml
circom-mpc-vm/src/: accelerator.rs  lib.rs  mpc_vm.rs  op_codes.rs  types.rs
circom-types/: CHANGELOG.md  Cargo.toml
circom-types/src/: binfile.rs  lib.rs  r1cs.rs  traits.rs  witness.rs
circom-types/src/groth16/: mod.rs  proof.rs  public_input.rs  verification_key.rs  witness.rs  z_key.rs  zkey.rs
circom-types/src/plonk/: mod.rs  proof.rs  verification_key.rs  zkey.rs
co-circom-snarks/: CHANGELOG.md  Cargo.toml
co-circom/circom-graph/: Cargo.toml
co-circom/circom-graph/examples/: graph.rs
co-circom/circom-graph/src/: executor.rs  lib.rs  optimize.rs
co-circom/circom-mpc-compiler/: CHANGELOG.md  Cargo.toml
co-circom/circom-mpc-compiler/src/: lib.rs
co-circom/circom-mpc-vm/: CHANGELOG.md  Cargo.toml
co-circom/circom-mpc-vm/src/: accelerator.rs  lib.rs  mpc.rs  mpc_vm.rs  op_codes.rs  stack.rs  types.rs
co-circom/circom-mpc-vm2/: Cargo.toml
co-circom/circom-mpc-vm2/src/: accel.rs  api.rs  driver.rs  exec.rs  isa.rs  lib.rs  program.rs
co-circom/circom-mpc-vm2/tests/: accel.rs  api.rs  components.rs  functions.rs  rep3_driver.rs  shared_if.rs  straightline.rs
co-circom/circom-types/: CHANGELOG.md  Cargo.toml  Readme.md
co-circom/circom-types/src/: binfile.rs  lib.rs  r1cs.rs  traits.rs  witness.rs
co-circom/co-circom/: CHANGELOG.md  Cargo.toml
co-circom/co-circom-snarks/: CHANGELOG.md  Cargo.toml
co-circom/co-circom-snarks/src/: lib.rs
co-circom/co-circom-types/: CHANGELOG.md  Cargo.toml
co-circom/co-circom-types/src/: lib.rs
co-circom/co-circom/benches/: zkey_parse.rs
co-circom/co-circom/examples/: co_circom_party0.rs  co_circom_party1.rs  co_circom_party2.rs  party0.rs  party1.rs  party2.rs
co-circom/co-circom/src/: file_utils.rs  lib.rs
co-circom/co-groth16/: CHANGELOG.md  Cargo.toml
co-circom/co-groth16/src/: groth16.rs  lib.rs  mpc.rs  verifier.rs
co-circom/co-plonk/: CHANGELOG.md  Cargo.toml
co-circom/co-plonk/src/: lib.rs  mpc.rs  plonk.rs  round1.rs  round2.rs  round3.rs  round4.rs  round5.rs  types.rs
co-noir/client-ivc/: Cargo.toml
co-noir/client-ivc/src/: lib.rs
co-noir/co-acvm/: CHANGELOG.md  Cargo.toml
co-noir/co-acvm/src/: lib.rs  mpc.rs  pss_store.rs  solver.rs  types.rs  value_store.rs
co-noir/co-brillig/: CHANGELOG.md  Cargo.toml
co-noir/co-brillig/src/: blackbox.rs  brillig_vm.rs  field_ops.rs  int_ops.rs  lib.rs  memory.rs  mpc.rs  taceo_std_lib.rs
co-noir/co-builder/: CHANGELOG.md  Cargo.toml
co-noir/co-builder/src/: acir_format.rs  builder.rs  generic_builder.rs  honk_curve.rs  honk_recursion_constraint.rs  ipa.rs  lib.rs  mega_builder.rs  prelude.rs  prover_flavour.rs  serialize.rs  transcript.rs  transcript_ct.rs  ultra_builder.rs  ultra_recursive_verifier.rs  utils.rs
co-noir/co-builder/tests/: batch_mul.rs  big_group.rs  ecc_op_queue.rs  goblin_types.rs  mega_builder.rs  mod.rs  test_data
co-noir/co-goblin/: CHANGELOG.md  Cargo.toml
co-noir/co-goblin/src/: co_merge_prover.rs  ipa.rs  lib.rs
co-noir/co-goblin/tests/: plaindriver.rs
co-noir/co-noir-common/: CHANGELOG.md  Cargo.toml
co-noir/co-noir-common/src/: barycentric.rs  lib.rs  (+13 more)
co-noir/co-noir-types/: Cargo.toml
co-spdz-noir/: Cargo.toml
co-spdz-noir/tests/: correctness.rs  e2e.rs  mac_during_proving.rs
collaborative-circom/: CHANGELOG.md  Cargo.toml
collaborative-circom/benches/: zkey_parse.rs
collaborative-circom/examples/: .gitignore  proof.0.json1  run.sh  run_full.sh  run_full_kyc.sh  run_full_kyc_shamir_bls.sh  run_full_multiplier2.sh  run_full_poseidon.sh  run_full_poseidon_shamir.sh  run_full_sum_arrays.sh  run_full_with_merge.sh  run_proof_only_kyc_bls.sh  run_proof_only_poseidon.sh  run_proof_only_poseidon_shamir.sh
collaborative-circom/src/: config.rs  file_utils.rs  lib.rs
collaborative-groth16/: CHANGELOG.md  Cargo.toml  log.txt  my_cool_proof.json
collaborative-groth16/src/: circom_reduction.rs  circuit.rs  collab_reduction.rs  compiler_tests.rs  groth16.rs  groth16_proof_with_assignment.rs  lib.rs  plonk.rs  serde_compat.rs  verifier.rs  vm.rs
collaborative-plonk/: CHANGELOG.md  Cargo.toml  I AM HERE  proof.json
collaborative-plonk/src/: lib.rs  plonk.rs  round1.rs  round2.rs  round3.rs  round4.rs  round5.rs  types.rs  verifiy.rs
flamegraph/: Cargo.toml
flamegraph/src/: lib.rs
mpc-core/: CHANGELOG.md  Cargo.toml  run_bench.sh
mpc-core/benches/: local_mul_vec.rs  poseidon2.rs  poseidon2_circom_accelerator.rs  poseidon2_mpc.rs  poseidon2_mpc_tcp.rs  share_fft.rs  share_field_elements_benchmark.rs  wire.rs
mpc-core/src/: lib.rs  lut.rs  protocols.rs  serde_compat.rs  traits.rs
mpc-core/tests/: integration_tests.rs
mpc-net/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
mpc-net/examples/: bench.rs  config.yaml  config_party1.toml  config_party2.toml  config_party3.toml  gen_cert.rs  run_3_party.sh  run_quic.sh  run_tcp.sh  run_tls.sh  three_party.rs  three_party_bincode_channels.rs  three_party_custom_channels.rs  three_party_libfabric.rs  three_party_managed.rs  three_party_mpi.rs  three_party_quic.rs  three_party_tcp.rs  three_party_tls.rs
mpc-net/src/: async_net.rs  blocking.rs  channel.rs  codecs.rs  config.rs  lib.rs  libfabric_efa.rs  local.rs  mpi.rs  queue.rs  quic.rs  tcp.rs  tcp_session.rs  tcp_session_blocking.rs  test.rs  thread.rs  tls.rs  tracking_rw.rs
mpc-net/tests/: config.rs  quic.rs  tcp.rs  tcp_session.rs  tcp_session_blocking.rs  tls.rs
tests/: Cargo.toml  e2e_tests.rs
tests/benches/: poseidon_hash2.rs
tests/e2e_tests/: aby3.rs  gsz.rs  rep3.rs  shamir.rs
tests/src/: lib.rs  rep3_network.rs  shamir_network.rs
tests/witness-extension_test/: aby3.rs  plain_vm.rs  rep3.rs
(+1960 files in other folders)
