[workspace]
members = [
    "circom-mpc-vm",
    "circom-types",
    "collaborative-groth16",
    "collaborative-circom",
    "mpc-core",
    "mpc-net",
    "tests",
    "circom-mpc-compiler",
]
resolver = "1" # need resolver 1 because of circom upstream

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/collaborative-circom"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = "0.4.2"
ark-groth16 = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-poly = "0.4.2"
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4", features = ["derive", "std"] }
ark-std = { version = "0.4.0", features = ["std"] }
bincode = "1.3.3"
bytemuck = { version = "1.15", features = ["derive"] }
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.3"
criterion = { version = "0.5", features = ["async_tokio"] }
eyre = "0.6"
futures = "0.3.30"
hex-literal = "0.4.1"
itertools = "0.13.0"
mpc-net = { version = "0.1.0", path = "mpc-net" }
num-bigint = { version = "0.4.5" }
num-traits = { version = "0.2.18", default-features = false }
rand_chacha = "0.3"
rcgen = "0.13"
sha2 = "0.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
rand = "0.8.5"
rayon = "1.8.1"
thiserror = "1.0.59"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3"
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }
toml = "0.8.13"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
opt-level = 1
inherits = "dev"
incremental = false
debug = true
# [profile.ci-dev.build-override]
# opt-level = 3
