[workspace]
members = [
    "co-circom/circom-mpc-compiler",
    "co-circom/circom-mpc-vm",
    "co-circom/circom-types",
    "co-circom/co-circom-snarks",
    "co-circom/co-circom",
    "co-circom/co-groth16",
    "co-circom/co-plonk",
    "co-noir/co-acvm",
    "co-noir/ultrahonk",
    "co-noir/co-ultrahonk",
    "mpc-core",
    "mpc-net",
    "tests",
]
resolver = "1" # need resolver 1 because of circom upstream

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/collaborative-circom"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
acir = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acir" }
acvm = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acvm" }
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4", features = ["derive", "std"] }
ark-std = { version = "0.4.0", features = ["std"] }
bincode = "1.3.3"
bytemuck = { version = "1.15", features = ["derive"] }
byteorder = "1.5.0"
bytes = "1.5.0"
circom-mpc-compiler = { version = "0.6.0", path = "co-circom/circom-mpc-compiler" }
circom-mpc-vm = { version = "0.4.0", path = "co-circom/circom-mpc-vm" }
circom-types = { version = "0.5.0", path = "co-circom/circom-types" }
clap = { version = "4.4.8", features = ["derive"] }
co-acvm = { version = "0.1.0", path = "co-noir/co-acvm" }
co-circom-snarks = { version = "0.1.0", path = "co-circom/co-circom-snarks" }
co-groth16 = { version = "0.5.0", path = "co-circom/co-groth16" }
co-plonk = { version = "0.3.0", path = "co-circom/co-plonk" }
color-eyre = "0.6.3"
criterion = { version = "0.5", features = ["async_tokio"] }
eyre = "0.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.30"
hex-literal = "0.4.1"
intmap = "2.0.0"
itertools = "0.13.0"
mpc-core = { version = "0.4.0", path = "mpc-core" }
mpc-net = { version = "0.1.2", path = "mpc-net" }
noirc-abi = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_abi" }
noirc-artifacts = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_artifacts" }
num-bigint = { version = "0.4.5" }
num-traits = { version = "0.2.18", default-features = false }
paste = "1.0.15"
rand = "0.8.5"
rand_chacha = "0.3"
rayon = "1.8.1"
rcgen = "0.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
sha2 = "0.10"
sha3 = "0.10.8"
thiserror = "1.0.59"
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }
toml = "0.8.13"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
opt-level = 1
inherits = "dev"
incremental = false
debug = true
# [profile.ci-dev.build-override]
# opt-level = 3
