[workspace]
members = [
    "co-circom/circom-mpc-compiler",
    "co-circom/circom-mpc-vm",
    "co-circom/circom-types",
    "co-circom/co-circom-snarks",
    "co-circom/co-circom",
    "co-circom/co-groth16",
    "co-circom/co-plonk",
    "co-noir/co-acvm",
    "co-noir/co-brillig",
    "co-noir/co-builder",
    "co-noir/ultrahonk",
    "co-noir/co-ultrahonk",
    "co-noir/co-noir",
    "mpc-core",
    "mpc-net",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/collaborative-circom"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
acir = { version = "1.0.0-beta.3", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3", package = "acir" }
acvm = { version = "1.0.0-beta.3", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3", package = "acvm" }
ark-bls12-381 = "^0.5.0"
ark-bn254 = "^0.5.0"
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = "^0.5.0"
ark-poly = "^0.5.0"
ark-serialize = { version = "^0.5.0", features = ["derive", "std"] }
ark-std = { version = "^0.5.0", features = ["std"] }
bincode = "1.3.3"
brillig = { version = "1.0.0-beta.3", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3", package = "brillig" }
bytemuck = { version = "1.15", features = ["derive"] }
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.3"
criterion = { version = "0.5", features = ["async_tokio"] }
eyre = "0.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.30"
hex-literal = "0.4.1"
intmap = "3.1"
itertools = "0.14.0"
noirc-abi = { version = "1.0.0-beta.3", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3", package = "noirc_abi" }
noirc-artifacts = { version = "1.0.0-beta.3", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3", package = "noirc_artifacts" }
num-bigint = { version = "0.4.5" }
num-traits = { version = "0.2.18", default-features = false }
paste = "1.0.15"
quinn = "0.11"
rand = "0.8.5"
rand_chacha = "0.3"
rayon = "1.8.1"
rcgen = "0.13"
rustls = "0.23.15"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
sha2 = "0.10"
sha3 = "0.10.8"
subtle = "2.6"
thiserror = "2"
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.13"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3"
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-bls12-381 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }

# This profile can be used for CI in pull requests.
[profile.ci-dev]
opt-level = 1
inherits = "dev"
incremental = false
debug = true
overflow-checks = false
# [profile.ci-dev.build-override]
# opt-level = 3
