[package]
name = "circom-mpc-compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0"           #required because of the circom compiler dependencies
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
circom-circom_algebra = { git = "https://github.com/TaceoLabs/circom", package = "circom_algebra", branch = "dev" }
circom-code_producers = { git = "https://github.com/TaceoLabs/circom", package = "code_producers", branch = "dev" }
circom-compiler = { git = "https://github.com/TaceoLabs/circom", package = "compiler", branch = "dev" }
circom-constant_tracking = { git = "https://github.com/TaceoLabs/circom", package = "constant_tracking", branch = "dev" }
circom-constraint_generation = { git = "https://github.com/TaceoLabs/circom", package = "constraint_generation", branch = "dev" }
circom-constraint_list = { git = "https://github.com/TaceoLabs/circom", package = "constraint_list", branch = "dev" }
circom-constraint_writers = { git = "https://github.com/TaceoLabs/circom", package = "constraint_writers", branch = "dev" }
circom-dag = { git = "https://github.com/TaceoLabs/circom", package = "dag", branch = "dev" }
circom-mpc-vm = { version = "0.1.0", path = "../circom-mpc-vm" }
circom-parser = { git = "https://github.com/TaceoLabs/circom", package = "parser", branch = "dev" }
circom-program_structure = { git = "https://github.com/TaceoLabs/circom", package = "program_structure", branch = "dev" }
circom-type_analysis = { git = "https://github.com/TaceoLabs/circom", package = "type_analysis", branch = "dev" }
eyre.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
circom-types = { path = "../circom-types" }
tracing.workspace = true
# we want to test logging of other crates, so we disable the env filter
tracing-test = { workspace = true, features = ["no-env-filter"] }
