[package]
name = "circom-mpc-compiler"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0"           #required because of the circom compiler dependencies
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
circom-circom_algebra = { version = "2.1.4", git = "https://github.com/TaceoLabs/circom", package = "circom_algebra", branch = "dev" }
circom-code_producers = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "code_producers", branch = "dev" }
circom-compiler = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "compiler", branch = "dev" }
circom-constant_tracking = { version = "2.0.0", git = "https://github.com/TaceoLabs/circom", package = "constant_tracking", branch = "dev" }
circom-constraint_generation = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "constraint_generation", branch = "dev" }
circom-constraint_list = { version = "2.1.8", git = "https://github.com/TaceoLabs/circom", package = "constraint_list", branch = "dev" }
circom-constraint_writers = { version = "2.1.8", git = "https://github.com/TaceoLabs/circom", package = "constraint_writers", branch = "dev" }
circom-dag = { version = "2.1.8", git = "https://github.com/TaceoLabs/circom", package = "dag", branch = "dev" }
circom-mpc-vm = { version = "0.1.1", path = "../circom-mpc-vm" }
circom-parser = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "parser", branch = "dev" }
circom-program_structure = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "program_structure", branch = "dev" }
circom-type_analysis = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "type_analysis", branch = "dev" }
eyre.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
circom-types = { version = "0.2.0", path = "../circom-types" }
collaborative-groth16 = { version = "0.2.0", path = "../collaborative-groth16" }
mpc-core = { version = "0.2.0", path = "../mpc-core" }
tracing.workspace = true
