[package]
name = "circom-mpc-compiler"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0"           #required because of the circom compiler dependencies
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
circom-compiler = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "compiler", branch = "dev" }
circom-constraint_generation = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "constraint_generation", branch = "dev" }
circom-mpc-vm = { version = "0.3.0", path = "../circom-mpc-vm" }
circom-parser = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "parser", branch = "dev" }
circom-program_structure = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "program_structure", branch = "dev" }
circom-type_analysis = { version = "2.1.9", git = "https://github.com/TaceoLabs/circom", package = "type_analysis", branch = "dev" }
eyre.workspace = true
itertools.workspace = true
serde.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
circom-types = { version = "0.4.0", path = "../circom-types" }
collaborative-groth16 = { version = "0.3.0", path = "../collaborative-groth16" }
mpc-core = { version = "0.3.0", path = "../mpc-core" }
tracing.workspace = true
