[package]
name = "circom-mpc-vm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
eyre.workspace = true
itertools.workspace = true
mpc-core = { version = "0.1.0", path = "../mpc-core" }
mpc-net = { version = "0.1.0", workspace = true }
num-bigint.workspace = true
num-traits.workspace = true
tracing.workspace = true
