[package]
name = "circom-mpc-vm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
collaborative-groth16 = { version = "0.2.1", path = "../collaborative-groth16" }
eyre.workspace = true
itertools.workspace = true
mpc-core = { version = "0.2.1", path = "../mpc-core" }
mpc-net = { workspace = true }
num-bigint.workspace = true
num-traits.workspace = true
tracing.workspace = true
