[package]
name = "circom-mpc-vm"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
co-circom-snarks = { version = "0.1.1", path = "../co-circom-snarks" }
eyre.workspace = true
itertools.workspace = true
mpc-core = { version = "0.4.0", path = "../mpc-core" }
mpc-net = { workspace = true }
tracing.workspace = true
serde.workspace = true
