[package]
name = "circom-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
byteorder = "1.5.0"
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
[dev-dependencies]
hex-literal = { workspace = true }
num-bigint = { version = "0.4.4", default-features = false, features = [
    "rand",
] }
