
[package]
name = "co-circom-snarks"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
circom-types = { version = "0.3.0", path = "../circom-types" }
eyre = { workspace = true }
mpc-core = { version = "0.2.1", path = "../mpc-core" }
num-traits = { workspace = true }
serde = { workspace = true }
[dev-dependencies]
