[package]
name = "collaborative-circom"
version = "0.1.0"

publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254.workspace = true
bincode.workspace = true
circom-types = { version = "0.1.0", path = "../circom-types" }
clap.workspace = true
collaborative-groth16 = { version = "0.1.0", path = "../collaborative-groth16" }
color-eyre.workspace = true
mpc-core = { version = "0.1.0", path = "../mpc-core" }
mpc-net.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
serde_json.workspace = true
ark-groth16.workspace = true
