[package]
name = "collaborative-circom"
version = "0.2.1"

publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "GPL-3.0"           # due to transitive dependency on circom-mpc-compiler
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
bincode.workspace = true
circom-types = { version = "0.3.0", path = "../circom-types" }
circom-mpc-compiler = { version = "0.3.0", path = "../circom-mpc-compiler" }
clap.workspace = true
collaborative-groth16 = { version = "0.2.1", path = "../collaborative-groth16" }
color-eyre = "0.6.3"
mpc-core = { version = "0.2.1", path = "../mpc-core" }
mpc-net.workspace = true
num-bigint.workspace = true
rand.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
serde_json.workspace = true
ark-groth16.workspace = true
