[package]
name = "collaborative-circom"
version = "0.3.0"

publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "GPL-3.0"           # due to transitive dependency on circom-mpc-compiler
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
bincode.workspace = true
circom-mpc-compiler = { version = "0.4.0", path = "../circom-mpc-compiler" }
circom-mpc-vm = { version = "0.3.0", path = "../circom-mpc-vm" }
circom-types = { version = "0.4.0", path = "../circom-types" }
clap.workspace = true
co-circom-snarks = { version = "0.1.0", path = "../co-circom-snarks" }
collaborative-groth16 = { version = "0.3.0", path = "../collaborative-groth16", features = [
    "verifier",
] }
collaborative-plonk = { version = "0.1.0", path = "../collaborative-plonk" }
color-eyre.workspace = true
figment.workspace = true
mpc-core = { version = "0.3.0", path = "../mpc-core" }
mpc-net.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "zkey_parse"
harness = false
