[package]
name = "collaborative-groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
byteorder = { workspace = true }
circom-types = { version = "0.1.0", path = "../circom-types" }
color-eyre = { workspace = true }
itertools = { workspace = true }
mpc-core = { version = "0.1.0", path = "../mpc-core" }
mpc-net = { version = "0.1.0", path = "../mpc-net" }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
