[package]
name = "collaborative-groth16"
version = "0.2.1"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
verifier = ["dep:ark-groth16"]

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true, optional = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
circom-types = { version = "0.3.0", path = "../circom-types" }
eyre = { workspace = true }
itertools = { workspace = true }
mpc-core = { version = "0.2.1", path = "../mpc-core" }
mpc-net = { version = "0.1.2", path = "../mpc-net" }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ark-groth16 = { workspace = true }
serde_json = { workspace = true }
