[package]
name = "collaborative-plonk"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
circom-types = { version = "0.4.0", path = "../circom-types" }
co-circom-snarks = { version = "0.1.0", path = "../co-circom-snarks" }
eyre = { workspace = true }
itertools = { workspace = true }
mpc-core = { version = "0.3.0", path = "../mpc-core" }
num-traits = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
