[package]
name = "flamegraph"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true }
