[package]
name = "mpc-core"
version = "0.5.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dangerous = []

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bytes = { workspace = true }
eyre = { workspace = true }
fancy-garbling = { git = "https://github.com/GaloisInc/swanky", rev = "586a6ba1efdb531542668d6b0afe5cacc302d434" }
itertools = { workspace = true }
mpc-net = { version = "0.1.2", path = "../mpc-net" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev = "586a6ba1efdb531542668d6b0afe5cacc302d434" }
subtle = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-std = { workspace = true }
paste.workspace = true
