[package]
name = "mpc-core"
version = "0.8.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dangerous = []

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bytes = { workspace = true }
eyre = { workspace = true }
fancy-garbling = { git = "https://github.com/GaloisInc/swanky", rev = "5ff648457218b74da9d8323b7ca47166ff5be4b3" }
itertools = { workspace = true }
mpc-net = { version = "0.3.0", path = "../mpc-net" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev = "5ff648457218b74da9d8323b7ca47166ff5be4b3" }
subtle = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
ark-std = { workspace = true }
paste.workspace = true
criterion.workspace = true


[[bench]]
name = "local_mul_vec"
harness = false
