[package]
name = "mpc-net"
version = "0.4.0"
exclude = ["data"]
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
[features]
default = ["tcp"]
local = []
tcp = ["dep:crossbeam-channel", "dep:socket2"]
tls = ["dep:rustls", "dep:crossbeam-channel", "dep:socket2"]
quic = ["dep:rustls", "dep:futures", "dep:quinn", "dep:tokio", "dep:tokio-util"]

[[example]]
name = "three_party_tcp"
required-features = ["tcp"]

[[example]]
name = "three_party_tls"
required-features = ["tls"]

[[example]]
name = "three_party_quic"
required-features = ["quic"]

[dependencies]
byteorder.workspace = true
bytes = { workspace = true }
eyre.workspace = true
futures = { version = "0.3.30", optional = true }
intmap.workspace = true
parking_lot = "0.12.4"
quinn = { version = "0.11", optional = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
], optional = true }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
toml.workspace = true
tracing = { workspace = true }
crossbeam-channel = { version = "0.5.15", optional = true }
humantime-serde = "1.1.1"
socket2 = { version = "0.5.10", optional = true }

[dev-dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
rcgen = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
