[package]
name = "mpc-net"
version = "0.5.0"
exclude = ["data"]
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
[features]
default = ["tcp", "mpi"]
libfabric-efa = ["tcp", "dep:libfabric-efa-rs"]
local = []
tcp = ["dep:crossbeam-channel", "dep:socket2"]
tcp-session = ["dep:tokio", "dep:tokio-util", "dep:futures"]
tls = ["dep:rustls", "dep:crossbeam-channel", "dep:socket2"]
quic = ["dep:rustls", "dep:futures", "dep:quinn", "dep:tokio", "dep:tokio-util"]
mpi = ["dep:mpi"]

[[example]]
name = "three_party_tcp"
required-features = ["tcp"]

[[example]]
name = "three_party_tls"
required-features = ["tls"]

[[example]]
name = "three_party_quic"
required-features = ["quic"]

[[example]]
name = "three_party_libfabric"
required-features = ["libfabric-efa"]

[[example]]
name = "three_party_mpi"
required-features = ["mpi"]

[dependencies]
ark-serialize = { workspace = true }
byteorder.workspace = true
bytes = { workspace = true }
eyre.workspace = true
futures = { version = "0.3.30", optional = true }
intmap.workspace = true
itertools.workspace = true
mpi = { version = "0.8", optional = true }
parking_lot = "0.12.4"
libfabric-efa-rs = { version = "0.1.0", git = "https://github.com/TaceoLabs/libfabric-efa-rs.git", rev = "0d288ef", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
], optional = true }
tokio-util = { version = "0.7.17", features = ["codec"], optional = true }
toml.workspace = true
tracing = { workspace = true }
crossbeam-channel = { version = "0.5.15", optional = true }
humantime-serde = "1.1.1"
socket2 = { version = "0.6.0", optional = true }

[dev-dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
rcgen = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
