[package]
name = "mpc-net"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude = ["data"]
publish.workspace = true

[[example]]
name = "bench"
required-features = ["tcp"]

[[example]]
name = "three_party_tcp"
required-features = ["tcp"]

[[example]]
name = "three_party_tls"
required-features = ["tls"]

[[example]]
name = "three_party_quic"
required-features = ["quic"]

[dependencies]
byteorder.workspace = true
bytes = { workspace = true }
crossbeam-channel = { version = "0.5.15", optional = true }
eyre.workspace = true
futures = { version = "0.3.30", optional = true }
humantime-serde = "1.1.1"
intmap.workspace = true
itertools.workspace = true
parking_lot = "0.12.4"
quinn = { version = "0.11", optional = true }
rustls = { workspace = true }
serde = { workspace = true }
socket2 = { version = "0.6.0", optional = true }
tokio = { version = "1.48.0", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
], optional = true }
tokio-util = { version = "0.7.17", features = ["codec"], optional = true }
toml.workspace = true
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
rcgen = { workspace = true }
reserve-port = "2"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[features]
default = []
local = ["dep:crossbeam-channel"]
quic = ["dep:futures", "dep:quinn", "dep:tokio", "dep:tokio-util"]
tcp = ["dep:crossbeam-channel", "dep:socket2"]
tcp-session = ["dep:futures", "dep:tokio", "dep:tokio-util"]
tls = ["dep:crossbeam-channel", "dep:socket2"]
