[package]
name = "tests"
version = "0.1.9"
edition = "2021"
publish = false
license = "GPL-3.0" # due to circom-mpc-compiler dep

[dependencies]
acir = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
bytes = { workspace = true }
circom-mpc-compiler = { version = "0.7.1", path = "../co-circom/circom-mpc-compiler" }
circom-mpc-vm = { version = "0.5.0", path = "../co-circom/circom-mpc-vm" }
circom-types = { version = "0.6.0", path = "../co-circom/circom-types" }
co-acvm = { version = "0.4.0", path = "../co-noir/co-acvm" }
co-circom-snarks = { version = "0.2.0", path = "../co-circom/co-circom-snarks" }
co-groth16 = { version = "0.7.0", path = "../co-circom/co-groth16", features = [
    "verifier",
] }
co-plonk = { version = "0.5.0", path = "../co-circom/co-plonk" }
co-ultrahonk = { version = "0.2.1", path = "../co-noir/co-ultrahonk" }
criterion = { workspace = true }
itertools = { workspace = true }
mpc-core = { version = "0.6.0", path = "../mpc-core" }
noirc-artifacts = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
num-bigint.workspace = true
paste.workspace = true
sha3.workspace = true
